--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -38,6 +38,7 @@
       deep-count="count"
       thread="child" thread-filter
       thread-collapsed="!search.query"
+      thread-root="true"
       ng-include="'thread.html'"
       ng-mouseenter="focus(child.message)"
       ng-click="scrollTo(child.message)""
