Pulse annotation cards when updated
In order to help the user notice updates arriving over the websocket,
this commit causes cards to pulse when they're updated.

If an annotation is part of a collapsed thread, then the pulse will
occur on the first visible parent thread.

Cards owned by the logged-in user will not pulse. This is primarily an
easy way of ensuring that cards don't pulse in the same view as they are
being edited (although it doesn't ensure this in all cases), but it also
makes sense more generally: users don't need to be notified of changes
they have made.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -35,6 +35,18 @@ $threadexp-width: .6em;
     &:focus { outline: 0; }
   }
 
+  @-webkit-keyframes pulse {
+    10% { background-color: #ffc; }
+  }
+  @keyframes pulse {
+    10% { background-color: #ffc; }
+  }
+
+  &.pulse {
+    -webkit-animation: pulse 1200ms ease-in-out;
+    animation: pulse 1200ms ease-in-out;
+  }
+
   .thread {
     border-left: 1px dotted $gray-light;
     padding: 0;
