--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -43,8 +43,8 @@
       ng-mouseenter="focus(child.message)"
       ng-click="scrollTo(child.message)""
       ng-mouseleave="focus()"
-      ng-repeat="child in vm.container.children | orderBy : sort.predicate"
-      ng-show="vm.container && shouldShowThread(child) &&
+      ng-repeat="child in streamItems | orderBy : sort.predicate"
+      ng-show="child && shouldShowThread(child) &&
                (count('edit') || count('match') || !threadFilter.active())">
   </li>
 </ul>
