Take spare quotation mark for my personal collection

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -40,7 +40,7 @@
       thread-collapsed="!search.query"
       ng-include="'thread.html'"
       ng-mouseenter="focus(child.message)"
-      ng-click="scrollTo(child.message)""
+      ng-click="scrollTo(child.message)"
       ng-mouseleave="focus()"
       ng-repeat="child in vm.container.children | orderBy : sort.predicate"
       ng-show="vm.container && shouldShowThread(child) &&
