Add renderer_global to expose feature to templates

--- a/h/templates/client/account.html
+++ b/h/templates/client/account.html
@@ -74,7 +74,7 @@
       </form>
     </div>
   {% endraw %}
-  {% if notifications_enabled %}
+  {% if feature('notification') %}
   {% raw %}
     <div class="tab-pane" title="Notifications">
       <form class="account-form form" name="notificationsForm">
