--- a/h/templates/app.html
+++ b/h/templates/app.html
@@ -48,10 +48,21 @@
            title="Close"
            ng-click="dialog.visible = false"></i>
         <div ng-if="auth.user">
-          {% include "h:templates/client/account.html" %}
+          {% block settings %}
+            <div class="tabbable"
+                 ng-controller="AccountController"
+                 ng-model="tab">
+              {% include_raw "h:templates/client/settings/account.html" %}
+              {% if feature('notification') %}
+                {% include_raw "h:templates/client/settings/notifications.html" %}
+              {% endif %}
+            </div>
+          {% endblock %}
         </div>
         <div ng-if="!auth.user">
-          {% include_raw "h:templates/client/auth.html" %}
+          {% block auth %}
+            {% include_raw "h:templates/client/auth.html" %}
+          {% endblock %}
         </div>
       </div>
     </div>
@@ -78,9 +89,6 @@
   </script>
   <script type="text/ng-template" id="thread.html">
     {% include_raw "h:templates/client/thread.html" %}
-  </script>
-  <script type="text/ng-template" id="notification.html">
-    {% include_raw "h:templates/client/notification.html" %}
   </script>
 {% endblock %}
 
