Fix bad include_raw in auth.html

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -9,6 +9,6 @@
 
 {% block templates %}
   <script type="text/ng-template" id="auth.html">
-    {% include_raw("h:templates/client/auth.html") %}
+    {{ include_raw("h:templates/client/auth.html") }}
   </script>
 {% endblock %}
