--- a/h/static/styles/pdfjs-overrides.scss
+++ b/h/static/styles/pdfjs-overrides.scss
@@ -5,18 +5,6 @@
 // PDFjs plugin provides a compatibility class to the PDFjs container that
 // we can use to detect this.
 .has-transparent-text-layer {
-  .annotator-hl {
-    &::-moz-selection {
-      background: rgba($highlight-color, 1);
-    }
-    &::-moz-selection, &::-moz-window-inactive, &::window-inactive {
-      background: rgba($highlight-color, 1);
-    }
-    &::selection, &::selection:window-inactive {
-      background: rgba($highlight-color, 1);
-    }
-  }
-
   .annotator-highlights-always-on & .annotator-hl {
     background: rgba($highlight-color, 1);
 
@@ -29,8 +17,11 @@
     }
   }
 
-  .annotator-hl-focused,
-  .annotator-highlights-always-on & .annotator-hl.annotator-hl-focused {
-    background-color: rgba($highlight-color-focus, 1);
+  .annotator-hl.annotator-hl-focused {
+    background-color: rgb(192, 236, 253);
+
+    .annotator-hl {
+      background-color: transparent !important;
+    }
   }
 }
