--- a/h/notification/templates/reply_notification.html
+++ b/h/notification/templates/reply_notification.html
@@ -1,7 +1,7 @@
 <p><a href="{{ reply_user_profile }}">{{ reply_user }}</a> has just left a reply to your annotation on
   &ldquo;<a href="{{ document_path }}">{{ document_title }}</a>&rdquo;.</p>
 
-<p>On <a href="{{ parent_path }}">{{ parent_timestamp }}</a> you said:</p>
+<p>On <a href="{{ parent_path }}">{{ parent_timestamp }}</a> {{ parent_user }} said:</p>
 
 <blockquote cite="{{ reply_path }}">&ldquo;{{ parent_text }}&rdquo;</blockquote>
 
