--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -10,6 +10,10 @@ $threadexp-width: .6em;
   & > li.thread.js-hover {
     @include focus-outline;
   }
+
+  & > li.thread > .threadexp {
+    display: none;
+  }
 }
 
 .thread-list {
