--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -1,7 +1,7 @@
 <!-- Thread view -->
 <ul class="stream-list"
     deep-count="count"
-    thread="threading.root"
+    thread="threadRoot"
     thread-filter="search.query">
   <li ng-show="threadFilter.active()"
       ><span ng-pluralize
