Remove negative margin on thread reply counts
Instead of using a negative margin to pull the reply count up in line
with the annotation actions, drop the clearfix on the annotation itself
so that the actions don't take up vertical layout space. Restore the
assurance that the actions and reply count don't get too close to the
card edge by putting the clearfix on the thread instead. Also, ensure
consistent use of the annotation-section class to get regular padding
rhythm on the annotation sections.

Fix #1808

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -6,7 +6,6 @@
   font-family: $sans-font-family;
   font-weight: 300;
   position: relative;
-  @include pie-clearfix;
 
   &:hover .annotation-timestamp, &:hover .reply-count {
     color: $link-color;
@@ -20,10 +19,13 @@
   &:focus { outline: 0; }
 }
 
-.annotation-header { margin-bottom: .8em }
-.annotation-section { margin: .8em 0 }
-.annotation-target { margin: .8em 0 }
-.annotation-footer { margin-top: .8em }
+.annotation-section {
+  @include pie-clearfix;
+  margin: .8em 0;
+}
+
+.annotation-header { margin-top: 0 }
+.annotation-footer { margin-bottom: 0 }
 
 .annotation-user {
   color: $text-color;
