--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -22,6 +22,7 @@ $threadexp-width: .6em;
 }
 
 .thread {
+  @include pie-clearfix;
   cursor: pointer;
   position: relative;
 
@@ -101,17 +102,12 @@ $threadexp-width: .6em;
 }
 
 .thread-message {
-  margin-bottom: .8em;
+  margin-bottom: .5em;
 }
 
 .thread-deleted {
   margin-top: .8em;
   margin-bottom: 2.8em;
-}
-
-.thread-reply {
-  margin-top: -2.153em;
-  margin-bottom: .8em;
 }
 
 .thread-message:hover + .thread-reply {
