Remove conflicting class names from annotations
Section, header and footer should be distinct, instead we just use the
cascade in the stylesheet to override the margins.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -19,7 +19,9 @@
   &:focus { outline: 0; }
 }
 
-.annotation-section {
+.annotation-section,
+.annotation-header,
+.annotation-footer {
   @include pie-clearfix;
   margin: .8em 0;
 }
