Remove extra margin on deleted elements
Now the thread is not using negative margins this isn't required.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -110,8 +110,7 @@ $threadexp-width: .6em;
 }
 
 .thread-deleted {
-  margin-top: .8em;
-  margin-bottom: 2.8em;
+  margin: .8em 0;
 }
 
 .thread-message:hover + .thread-reply {
