Add the concept of a root to the thread directive
This special cases the threads that are styled as cards rather than
replies and allows them to be styled accordingly.

--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -17,7 +17,7 @@
 </article>
 
 <!-- Reply count -->
-<div class="thread-reply" ng-show="count('message') > 0 && (!threadFilter.active() || count('message') == count('match'))">
+<div class="thread-reply" ng-show="!(vm.collapsed && !vm.isRoot) && count('message') > 0 && (!threadFilter.active() || count('message') == count('match'))">
   <a class="reply-count small"
      href=""
      ng-pluralize count="count('message') - 1"
