Fix help page template
The link to the public stream was left in chameleon format.
Changed to Jinja

Fix #1832

--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -91,7 +91,7 @@
             <div class="feature-content styled-text">
               <p>These annotations are visible to everyone both in the
                 document itself and our <a
-                href="${request.route_url('stream')}">public stream</a>.</p>
+                href="{{request.route_url('stream')}}">public stream</a>.</p>
             </div>
           </section>
           <section class="feature column-desktop-1-2">
