Remove minimum character limit on tags
Fixes #1484

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -78,6 +78,7 @@
               name="tags"
               class="tags"
               placeholder="Add tags…"
+              min-length="1"
               replace-spaces-with-dashes="false"
               enable-editing-last-tag="true"></tags-input>
 </div>
