Revert "Remove redundant icons selector"
This reverts commit 3902a0ba78874861e54c3c51a6b14aca4f75019a.

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -1,4 +1,5 @@
 @import 'base';
+@import 'mixins/icons';
 @import 'compass/css3/user-interface';
 @import 'compass/layout/stretching';
 @import 'compass/reset/utilities';
@@ -130,6 +131,10 @@ $base-font-size: 14px;
     width: 100%;
     z-index: 3;
     position: relative;
+  }
+
+  @include icons {
+    font-family: 'h';
   }
 }
 
