Typo fix "recieve" -> "receive"

--- a/h/notification/templates/reply_notification.html
+++ b/h/notification/templates/reply_notification.html
@@ -12,5 +12,5 @@
 <p><a href="{{ reply_path }}">Reply to {{ reply_user }}</a>.</p>
 
 <hr/>
-<p><small>If you&rsquo;d rather not recieve these notifications you can
+<p><small>If you&rsquo;d rather not receive these notifications you can
     <a href="{{ unsubscribe }}">unsubscribe now</a>.</small></p>
