Fix hit area for dropdown menu items
Now all items contain anchors which are set to display: block this
keeps all implementations consistent and improves accessibility.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -179,11 +179,14 @@ html {
   z-index: 2;
 
   li:not(.ng-hide) {
-    cursor: pointer;
-    line-height: 1;
     text-align: left;
-    padding: .5em;
-    white-space: nowrap;
+
+    a {
+      display: block;
+      line-height: 1;
+      padding: .5em;
+      white-space: nowrap;
+    }
 
     &:hover {
       color: black;
