--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -29,7 +29,7 @@
         <li ng-click="sort.name = option"
             ng-hide="option == 'Location' && !isEmbedded"
             ng-repeat="option in ['Newest', 'Oldest', 'Location']"
-            >{{option}}</li>
+            ><a href="">{{option}}</a></li>
       </ul>
     </span>
   </li>
