Consistent sentence formatting

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -13,7 +13,7 @@
   <li ng-show="!threadFilter.active() && selectedAnnotations"
       ><span ng-pluralize
              count="selectedAnnotationsCount"
-             when="{'0': 'No annotations selected',
+             when="{'0': 'No annotations selected.',
                     'one': 'Showing 1 selected annotation.',
                     'other': 'Showing {} selected annotations.'}"></span>
       <a href="" ng-click="clearSelection()">Clear selection</a>.</li>
