--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -19,6 +19,8 @@ $threadexp-width: .6em;
 .thread-list {
   margin-top: 0.5em;
 
+  .thread-reply { display: inline-block }
+
   .thread-collapsed {
     .tag-list, .annotation-body {display: none;}
     .thread-reply { margin-top: 0 }
