--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -5,6 +5,9 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
       <meta name="viewport" content="width=device-width,initial-scale=1" />
+      {% for property, content in layout.meta_properties %}
+        <meta property="{{ property }}" content="{{ content }}" />
+      {% endfor %}
       {% for name, content in layout.meta_attrs %}
         <meta name="{{ name }}" content="{{ content }}" />
       {% endfor %}
