Render reply count in annotation directive
The reply count being drawn in the thread directive causes display
issues if we want it to be in its current position alongside the
annotation controls.

This change moves the responsibility for (optionally) drawing a reply
count into the annotation directive. It results in simpler, clearer CSS
and in particular makes it possible to trigger a click event on the
reply count element.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -7,7 +7,12 @@
   font-weight: 300;
   position: relative;
 
-  &:hover .annotation-timestamp, &:hover .reply-count {
+  .reply-count {
+    color: $gray-light;
+    &:focus { outline: 0; }
+  }
+
+  &:hover .annotation-timestamp, &:hover .reply-count  {
     color: $link-color;
   }
 }
@@ -38,6 +43,10 @@
     cursor: pointer;
     text-decoration: underline;
   }
+}
+
+.annotation-replies {
+  display: inline-block;
 }
 
 .annotation-actions {
