Create page_title template tag
This provides a simple way to provide a title for the page while
retaining the Hypothesis suffix.

--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -10,7 +10,13 @@
       {% endfor -%}
     {% endblock %}
 
-    <title>{% block title %}Hypothesis{% endblock %}</title>
+    <title>
+      {%- block title -%}
+        {%- block page_title %}{% endblock -%}
+        {%- if self.page_title() %} | {% endif -%}
+        Hypothesis
+      {%- endblock -%}
+    </title>
 
     {% for attrs in link_attrs -%}
       <link {% for key, value in attrs.items() %}{{ key }}="{{ value }}" {% endfor %}/>
