--- a/h/claim/templates/claim_account.html
+++ b/h/claim/templates/claim_account.html
@@ -1,31 +1,32 @@
 {% extends "h:templates/layouts/base.html" %}
 
+{% block page_title %}Claim account{% endblock page_title %}
+
 {% block content %}
   <div id="claim" class="content paper">
     {% include "h:templates/includes/header.html" %}
     <div class="form-vertical">
-      <form class="form">
-        <p class="form-description form-error">
-        </p>
-
-        <input type="hidden" name="code" value=""/>
-        <div class="form-field">
+      <form class="form" action="{{ form.action }}" method="{{ form.method }}">
+        {{ form['csrf_token'].render() | safe }}
+        <div class="form-field{% if form['password'].error %} form-field-error{% endif %}">
           <label class="form-label" for="field-activate-password">
             New password:
             <span class="form-hint">(at least two characters)</span>
           </label>
           <input class="form-input" id="field-activate-password"
-                 type="password" name="password" value=""
-                 required autocapitalize="false" autocorrect="false" />
-          <ul class="form-error-list">
-            <li class="form-error"></li>
-          </ul>
+                 autofocus onfocus="this.select()"
+                 type="password" name="password" value="" required />
+          {% if form['password'].error %}
+            <ul class="form-error-list">
+              {% for err in form['password'].error.asdict().values() %}
+                <li class="form-error">{{ err }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}
         </div>
-
         <div class="form-actions">
           <div class="form-actions-buttons">
-            <button class="btn" type="submit" name="activate"
-                    status-button="activate">Claim account</button>
+            <button class="btn" type="submit">Claim account</button>
           </div>
         </div>
       </form>
