--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -790,7 +790,7 @@
             <a class="reply-count small" href="">1 reply</a>
             <a class="load-more small" href=""></a>
 
-            <ul class="thread-list">
+            <ul class="thread-replies">
               <li class="thread" deep-count="count" thread="child" thread-filter="">
                 <a href="" class="threadexp" title="Collapse"><span class="h-icon-minus"></span></a>
 
@@ -836,7 +836,7 @@
                 </article>
 
                 <a class="reply-count small" href=""></a>
-                <ul class="thread-list">
+                <ul class="thread-replies">
                 </ul>
               </li>
             </ul>
