--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -36,7 +36,7 @@
 </div>
 
 <!-- Replies -->
-<ul class="thread-list" ng-hide="vm.collapsed">
+<ul class="thread-replies">
   <li class="thread"
 
       thread="child"
