Move the thread-replies padding onto the first child
This stops thread cards with no replies changing in height when clicked.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -17,7 +17,9 @@ $threadexp-width: .6em;
 }
 
 .thread-replies {
-  margin-top: 0.5em;
+  .thread:first-child {
+    margin-top: 0.5em;
+  }
 
   .thread-collapsed {
     .tag-list, .annotation-body {display: none;}
