--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -1,7 +1,7 @@
 <a href="" class="threadexp"
-   title="{{vm.collapsed && 'Expand' || 'Collapse'}}"
-   ><span ng-class="{'h-icon-plus': !!vm.collapsed,
-                     'h-icon-minus': !vm.collapsed}"></span></a>
+   title="{{vm.isCollapsed() && 'Expand' || 'Collapse'}}"
+   ><span ng-class="{'h-icon-plus': vm.isCollapsed(),
+                     'h-icon-minus': !vm.isCollapsed()}"></span></a>
 
 <!-- Annotation -->
 <div ng-if="vm.container && !vm.container.message" class="thread-deleted">
@@ -45,7 +45,7 @@
       thread-filter
 
       ng-init="child.message.id || threadFilter.active(false)"
-      ng-class="{'thread-collapsed': vm.collapsed}"
+      ng-class="{'thread-collapsed': vm.isCollapsed()}"
       ng-repeat="child in vm.container.children
                  | orderBy : 'message.updated' : true"
       ng-show="count('edit') || count('match') || !threadFilter.active()">
