Make "collapsed" refer only to a thread's replies
The meaning of "collapsed" in the context of a thread was immensely
confusing:

- on a top-level annotation card it referred to whether replies were or
  were not shown
- on a reply, it referred to whether or not the entire annotation was
  hidden

This change removes all reference to the latter meaning. Annotations
(and replies) are still hidden appropriately when searches are
performed, but now collapsing and uncollapsing refers only to the
visibility of the *replies* of the addressed thread.

--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -36,7 +36,7 @@
 </div>
 
 <!-- Replies -->
-<ul class="thread-replies">
+<ul class="thread-replies" ng-hide="vm.isCollapsed()">
   <li class="thread"
 
       thread="child"
@@ -45,7 +45,6 @@
       thread-filter
 
       ng-init="child.message.id || threadFilter.active(false)"
-      ng-class="{'thread-collapsed': vm.isCollapsed()}"
       ng-repeat="child in vm.container.children
                  | orderBy : 'message.updated' : true"
       ng-show="count('edit') || count('match') || !threadFilter.active()">
