--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -13,22 +13,25 @@
          annotation="vm.container.message"
          annotation-embedded="{{embedded}}"
          ng-if="vm.container.message"
-         ng-show="threadFilter.check(vm.container)">
+         ng-show="vm.matchesFilter()">
 </article>
 
 <!-- Reply count -->
-<div class="thread-reply" ng-show="vm.shouldShowReply(count, threadFilter.active())">
+<div class="thread-reply"
+     ng-show="vm.shouldShowNumReplies()">
   <a class="reply-count small"
      href=""
-     ng-pluralize count="count('message') - 1"
+     ng-pluralize
+     count="vm.numReplies()"
      when="{'0': '', one: '1 reply', other: '{} replies'}"></a>
 </div>
 
-<div class="thread-load-more" ng-show="vm.container.message.id && threadFilter.active()">
+<div class="thread-load-more" ng-show="vm.shouldShowLoadMore()">
   <a class="load-more small"
      href=""
-     ng-click="threadFilter.active(false)"
-     ng-pluralize count="count('message') - count('match')"
+     ng-click="vm.loadMore()"
+     ng-pluralize
+     count="vm.numLoadMore()"
      when="{'0': '',
            one: 'View one more in conversation',
            other: 'View {} more in conversation'}"
@@ -36,7 +39,7 @@
 </div>
 
 <!-- Replies -->
-<ul class="thread-replies" ng-hide="vm.isCollapsed()">
+<ul class="thread-replies">
   <li class="thread"
 
       thread="child"
@@ -44,9 +47,8 @@
       deep-count="count"
       thread-filter
 
-      ng-init="child.message.id || threadFilter.active(false)"
       ng-repeat="child in vm.container.children
                  | orderBy : 'message.updated' : true"
-      ng-show="count('edit') || count('match') || !threadFilter.active()">
+      ng-show="vm.shouldShowAsReply()">
   </li>
 </ul>
