--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -22,7 +22,7 @@
             class="dropdown-toggle"
             data-toggle="dropdown">
         Sorted by {{sort.name | lowercase}}
-        <i class="h-icon-triangle small"></i>
+        <i class="h-icon-arrow-drop-down"></i>
       </span>
       <ul class="dropdown-menu pull-right" role="menu">
         <li ng-click="sort.name = option"
