--- a/h/templates/includes/bookmarklet.html
+++ b/h/templates/includes/bookmarklet.html
@@ -1,5 +1,4 @@
-
   <a class="bookmarklet"
    title="Drag this to your bookmarks"
    onclick="alert('Drag this to your bookmarks bar first');return false"
-   href="javascript:{% filter urlencode %}{% include "../bookmarklet.js" %}{% endfilter %}"><i class="h-icon-move"></i> Annotate</a>
+   href="javascript:{% filter urlencode %}{% include "../bookmarklet.js" %}{% endfilter %}"><i class="h-icon-bookmark"></i> Annotate</a>
