--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -369,7 +369,7 @@
           <button class="btn btn-danger js-active" type="submit" name="">Danger Button (active)</button>
         </div>
         <div class="form-field">
-          <button class="btn"><i class="h-icon-checkmark btn-icon"></i> Button with Icon Inside</button>
+          <button class="btn"><i class="h-icon-check btn-icon"></i> Button with Icon Inside</button>
         </div>
         <div class="form-field">
           <button class="btn btn-clean" type="submit" name="">Button Clean</button>
@@ -405,7 +405,7 @@
         </div>
         <div class="form-field" style="width: 230px; text-align: right">
           <span class="btn-with-message">
-            <span class="btn-message btn-message-success">Saved! <i class="btn-message-icon h-icon-checkmark"></i></span>
+            <span class="btn-message btn-message-success">Saved! <i class="btn-message-icon h-icon-check"></i></span>
             <button class="btn" type="submit" name="">
               Button Loading
             </button>
@@ -419,7 +419,7 @@
             </span>
             <!-- Insert with JavaScript -->
             <span class="btn-message btn-message-success">
-              <span class="btn-message-text">Saved!</span> <i class="btn-message-icon h-icon-checkmark"></i>
+              <span class="btn-message-text">Saved!</span> <i class="btn-message-icon h-icon-check"></i>
             </span>
             <button class="btn" type="submit" name="">
               Button Loading
@@ -512,7 +512,7 @@
           <input class="simple-search-input" type="text" name="searchText" placeholder="Search…" />
           <i class="simple-search-icon h-icon-search"></i>
           <button class="simple-search-clear" type="reset">
-            <i class="h-icon-x"></i>
+            <i class="h-icon-clear"></i>
           </button>
         </form>
       </div>
@@ -653,7 +653,7 @@
       </div>
       <div class="pattern-library-example-content">
         <div class="sheet">
-          <i class="close h-icon-cancel" role="button" title="Close"></i>
+          <i class="close h-icon-close" role="button" title="Close"></i>
           <div class="tabbable">
             <ul class="nav nav-tabs">
               <li class="active">
@@ -683,9 +683,9 @@
                 <username class="">
                   <span class="user">aron</span>
                 </username>
-                <i class="small h-icon-locked ng-hide"></i>
-                <i class="small h-icon-highlighter ng-hide"></i>
-                <i class="small h-icon-comment ng-hide"></i>
+                <i class="small h-icon-lock ng-hide"></i>
+                <i class="small h-icon-border-color ng-hide"></i>
+                <i class="small h-icon-mode-comment ng-hide"></i>
               </span>
               <fuzzytime class="small pull-right ng-pristine ng-valid">
                 <a target="_blank" href="" title="Friday, August 22 2014 10:07 AM" class="">25 days ago</a>
@@ -714,11 +714,11 @@
               <footer class="form-actions">
                 <div class="">
                   <a class="small magicontrol" href="" title="Reply"><i class="h-icon-reply"></i> Reply</a>
-                  <a class="small magicontrol" href="" title="Share"><i class="h-icon-export"></i> Share</a>
-                  <a class="small magicontrol" title="Edit"><i class="h-icon-copy"></i> Edit</a>
-                  <a class="small magicontrol" title="Delete"><i class="h-icon-x"></i> Delete…</a>
+                  <a class="small magicontrol" href="" title="Share"><i class="h-icon-share"></i> Share</a>
+                  <a class="small magicontrol" title="Edit"><i class="h-icon-edit"></i> Edit</a>
+                  <a class="small magicontrol" title="Delete"><i class="h-icon-delete"></i> Delete…</a>
                   <div class="share-dialog ng-hide">
-                    <a class="h-icon-export" target="_blank" href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
+                    <a class="h-icon-share" target="_blank" href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
                     <div>
                       <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly="">
                     </div>
@@ -743,9 +743,9 @@
                 <username class="">
                   <span class="user">aron</span>
                 </username>
-                <i class="small h-icon-locked ng-hide"></i>
-                <i class="small h-icon-highlighter ng-hide"></i>
-                <i class="small h-icon-comment ng-hide"></i>
+                <i class="small h-icon-lock ng-hide"></i>
+                <i class="small h-icon-border-color ng-hide"></i>
+                <i class="small h-icon-mode-comment ng-hide"></i>
               </span>
               <fuzzytime class="small pull-right ng-pristine ng-valid">
                 <a target="_blank" href="" title="Friday, August 22 2014 10:07 AM" class="">25 days ago</a>
@@ -774,11 +774,11 @@
               <footer class="form-actions">
                 <div class="">
                   <a class="small magicontrol" href="" title="Reply"><i class="h-icon-reply"></i> Reply</a>
-                  <a class="small magicontrol" href="" title="Share"><i class="h-icon-export"></i> Share</a>
-                  <a class="small magicontrol" title="Edit"><i class="h-icon-copy"></i> Edit</a>
-                  <a class="small magicontrol" title="Delete"><i class="h-icon-x"></i> Delete…</a>
+                  <a class="small magicontrol" href="" title="Share"><i class="h-icon-share"></i> Share</a>
+                  <a class="small magicontrol" title="Edit"><i class="h-icon-edit"></i> Edit</a>
+                  <a class="small magicontrol" title="Delete"><i class="h-icon-delete"></i> Delete…</a>
                   <div class="share-dialog ng-hide">
-                    <a class="h-icon-export" target="_blank" href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
+                    <a class="h-icon-share" target="_blank" href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
                     <div>
                       <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly="">
                     </div>
@@ -792,14 +792,14 @@
 
             <ul class="thread-replies">
               <li class="thread" deep-count="count" thread="child" thread-filter="">
-                <a href="" class="threadexp" title="Collapse"><span class="h-icon-minus"></span></a>
+                <a href="" class="threadexp" title="Collapse"><span class="h-icon-expand-less"></span></a>
 
                 <article class="annotation thread-message" name="annotation" annotation="vm.container.message" annotation-embedded="true" >
                   <header>
                     <span class="">
                       <username user="vm.annotation.user" class=""><span class="user ng-binding">aron</span></username>
-                      <i class="small h-icon-locked ng-hide"></i>
-                      <i class="small h-icon-highlighter ng-hide"></i>
+                      <i class="small h-icon-lock ng-hide"></i>
+                      <i class="small h-icon-border-color ng-hide"></i>
                     </span>
 
                     <fuzzytime class="small pull-right ng-pristine ng-valid"><a target="_blank" href="" title="Tuesday, August 19 2014 5:36 PM" class="ng-binding">28 days ago</a></fuzzytime>
@@ -822,11 +822,11 @@
                   <footer class="form-actions">
                     <div class="">
                       <a class="small magicontrol" href="" title="Reply"><i class="h-icon-reply"></i> Reply</a>
-                      <a class="small magicontrol" href="" title="Share"><i class="h-icon-export"></i> Share</a>
-                      <a class="small magicontrol ng-hide" href="" title="Edit"><i class="h-icon-copy"></i> Edit</a>
-                      <a class="small magicontrol ng-hide" href="" title="Delete"><i class="h-icon-x"></i> Delete…</a>
+                      <a class="small magicontrol" href="" title="Share"><i class="h-icon-share"></i> Share</a>
+                      <a class="small magicontrol ng-hide" href="" title="Edit"><i class="h-icon-edit"></i> Edit</a>
+                      <a class="small magicontrol ng-hide" href="" title="Delete"><i class="h-icon-delete"></i> Delete…</a>
                       <div class="share-dialog ng-hide">
-                        <a class="h-icon-export" target="_blank" href="http://localhost:5000/a/a5dDt67oQBSKhgqwGcgLuw"></a>
+                        <a class="h-icon-share" target="_blank" href="http://localhost:5000/a/a5dDt67oQBSKhgqwGcgLuw"></a>
                         <div>
                           <input type="text" value="http://localhost:5000/a/a5dDt67oQBSKhgqwGcgLuw" readonly="">
                         </div>
