--- a/h/templates/client/markdown.html
+++ b/h/templates/client/markdown.html
@@ -4,14 +4,14 @@
     <a href="" class="markdown-tools-toggle" ng-click="togglePreview()" ng-show="!preview">Preview</a>
     <a href="" class="markdown-tools-toggle" ng-click="togglePreview()" ng-show="preview">Write</a>
   </span>
-  <i class="h-icon-bold markdown-tools-button" ng-click="insertBold()" title="Embolden text"></i>
-  <i class="h-icon-italic markdown-tools-button" ng-click="insertItalic()" title="Italicize text"></i>
-  <i class="h-icon-quote markdown-tools-button" ng-click="insertQuote()" title="Quote text"></i>
-  <i class="h-icon-link markdown-tools-button" ng-click="insertLink()" title="Insert link"></i>
-  <i class="h-icon-image markdown-tools-button" ng-click="insertIMG()" title="Insert image"></i>
-  <i class="h-icon-math markdown-tools-button" ng-click="insertMath()" title="Insert mathematical notation (LaTex is supported)"></i>
-  <i class="h-icon-numlist markdown-tools-button" ng-click="insertNumList()" title="Insert numbered list"></i>
-  <i class="h-icon-ulist markdown-tools-button" ng-click="insertList()" title="Insert list"></i>
+  <i class="h-icon-format-bold markdown-tools-button" ng-click="insertBold()" title="Embolden text"></i>
+  <i class="h-icon-format-italic markdown-tools-button" ng-click="insertItalic()" title="Italicize text"></i>
+  <i class="h-icon-format-quote markdown-tools-button" ng-click="insertQuote()" title="Quote text"></i>
+  <i class="h-icon-insert-link markdown-tools-button" ng-click="insertLink()" title="Insert link"></i>
+  <i class="h-icon-insert-photo markdown-tools-button" ng-click="insertIMG()" title="Insert image"></i>
+  <i class="h-icon-functions markdown-tools-button" ng-click="insertMath()" title="Insert mathematical notation (LaTex is supported)"></i>
+  <i class="h-icon-format-list-numbered markdown-tools-button" ng-click="insertNumList()" title="Insert numbered list"></i>
+  <i class="h-icon-format-list-bulleted markdown-tools-button" ng-click="insertList()" title="Insert list"></i>
 </div>
 <textarea class="form-input form-textarea js-markdown-input"
           ng-hide="readonly || preview"
