--- a/h/templates/client/privacy.html
+++ b/h/templates/client/privacy.html
@@ -3,16 +3,16 @@
         role="button"
         class="dropdown-toggle"
         data-toggle="dropdown">
-        <i class="small" ng-class="{'h-icon-earth': isPublic(level.name),
-                                    'h-icon-locked': !isPublic(level.name)}"></i>
+        <i class="small" ng-class="{'h-icon-public': isPublic(level.name),
+                                    'h-icon-lock': !isPublic(level.name)}"></i>
         {{level.text}}
-        <i class="h-icon-triangle"></i>
+        <i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu" role="menu">
     <li ng-repeat="level in levels" ng-click="setLevel(level)">
       <a href="">
-        <i class="small" ng-class="{'h-icon-earth': isPublic(level.name),
-                                    'h-icon-locked': !isPublic(level.name)}"></i>
+        <i class="small" ng-class="{'h-icon-public': isPublic(level.name),
+                                    'h-icon-lock': !isPublic(level.name)}"></i>
         {{level.text}}
       </a>
     </li>
