--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -58,7 +58,7 @@
           with the application:</p>
         <div class="grid feature-content">
           <section class="feature column-desktop-1-2">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-copy"></i> Notes</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-create"></i> Notes</h3>
             <div class="feature-content styled-text">
               <p>Create a  <em>note</em> by selecting some text and clicking the button
                 that appears above the selection. You can then add your own
@@ -66,17 +66,17 @@
             </div>
           </section>
           <section class="feature column-desktop-1-2">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-highlighter"></i> Highlights</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-border-color"></i> Highlights</h3>
             <div class="feature-content">
               <p>Quick  <em>highlights</em> can be created with the highlighter mode;
-                  enable this by using the  highlighter <i class="help-icon h-icon-highlighter"></i> button in the application
+                  enable this by using the  highlighter <i class="help-icon h-icon-border-color"></i> button in the application
                   menu.</p>
             </div>
           </section>
           <section class="feature column-desktop-1-2">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-comment"></i> Comments</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-mode-comment"></i> Comments</h3>
             <div class="feature-content">
-              <p>Leave a  <em>comment</em> on the document by using the comment <i class="help-icon h-icon-plus"></i> button
+              <p>Leave a  <em>comment</em> on the document by using the comment <i class="help-icon h-icon-add"></i> button
                 in the application menu.</p>
             </div>
           </section>
@@ -95,7 +95,7 @@
           or private and visible only to you.</p>
         <div class="grid feature-content">
           <section class="feature column-desktop-1-2">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-earth"></i> Public</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-public"></i> Public</h3>
             <div class="feature-content styled-text">
               <p>These annotations are visible to everyone both in the
                 document itself and our <a
@@ -103,7 +103,7 @@
             </div>
           </section>
           <section class="feature column-desktop-1-2">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-locked"></i> Private</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-lock"></i> Private</h3>
             <div class="feature-content">
               <p>Private annotations are visible only to you when logged in.</p>
             </div>
@@ -158,7 +158,7 @@
     </article>
     <div class="help-page-sidebar">
       <div id="help-1">
-        <p>Show and hide the sidebar using the <i class="h-icon-comment"></i> button</p>
+        <p>Show and hide the sidebar using the <i class="h-icon-mode-comment"></i> button</p>
       </div>
       <div id="help-2"></div>
     </div>
