Add ability to generate via links from the sidebar.
- Use document plugin to get canonical url for sharing.
- Introduce Topbar share icon
- Add social media icons to icomoon
- Generate via uri in the share-dialog directive
- Add sharing via Facebook, Twitter, Google plus, and email
- Make account dialog and share dialog consistent
- Add information about sharing to the help page.
- Add tests (Thanks @nickstenning!)

--- a/h/templates/app.html
+++ b/h/templates/app.html
@@ -16,7 +16,7 @@
           --><span class="provider" ng-show="auth.user">/{% raw %}{{ auth.user|persona:'provider' }}{% endraw %}</span><!--
           --><i class="h-icon-arrow-drop-down"></i></span>
         <ul class="dropdown-menu pull-right" role="menu">
-          <li ng-show="auth.user"><a href="" ng-click="dialog.visible='true'">Account</a></li>
+          <li ng-show="auth.user"><a href="" ng-click="accountDialog.visible='true'">Account</a></li>
           <li><a href="mailto:support@hypothes.is">Feedback</a></li>
           <li><a href="/docs/help" target="_blank">Help</a></li>
           <li ng-show="auth.user"><a href="/stream?q=user:{% raw %}{{ auth.user|persona }}{% endraw %}"
@@ -27,6 +27,14 @@
       <a class="pull-right" href=""
          ng-click="login()"
          ng-switch-when="null">Sign in</a>
+
+      <!-- Share this page -->
+      <span class="share-dialog-toggle" ng-show="showShareButton">
+        <i class="h-icon-share"
+           title="Share this page"
+           ng-click="shareDialog.visible = !shareDialog.visible"></i>
+      </span>
+      <!-- / Share this page -->
 
       <!-- Searchbar -->
       <div class="simple-search"
@@ -40,13 +48,13 @@
 
   <!-- Wrapper -->
   <div id="wrapper" whenscrolled="loadMore(10)">
-    <!-- Dialog -->
-    <div class="content ng-cloak" ng-if="dialog.visible">
+    <!-- Account Dialog -->
+    <div class="content ng-cloak" ng-if="accountDialog.visible">
       <div id="dialog" class="sheet">
         <i class="close h-icon-close"
            role="button"
            title="Close"
-           ng-click="dialog.visible = false"></i>
+           ng-click="accountDialog.visible = false"></i>
         <div ng-if="auth.user">
           {% block settings %}
             <div class="tabbable"
@@ -66,7 +74,11 @@
         </div>
       </div>
     </div>
-    <!-- / Dialog -->
+    <!-- / Account Dialog -->
+
+    <!-- Share View Dialog -->
+    <div share-dialog="" ng-show="shareDialog.visible"></div>
+    <!-- / Share View Dialog -->
 
     <!-- Angular view -->
     <main class="content" ng-view=""></main>
@@ -83,6 +95,9 @@
   </script>
   <script type="text/ng-template" id="privacy.html">
     {{ include_raw("h:templates/client/privacy.html") }}
+  </script>
+  <script type="text/ng-template" id="share_dialog.html">
+    {{ include_raw("h:templates/client/share_dialog.html") }}
   </script>
   <script type="text/ng-template" id="viewer.html">
     {{ include_raw("h:templates/client/viewer.html") }}
