--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -102,8 +102,16 @@
         </div>
       </section>
       <section class="help-page-section">
-        <h3 class="feature-heading"><i class="feature-icon h-icon-visibility"></i>Show/Hide Highlights</h3>
-        <p class="feature-content">Use the <i class="help-icon h-icon-visibility"></i> button to toggle highlight visibility on a page.</p>
+        <section class="feature">
+          <h3 class="feature-heading"><i class="feature-icon h-icon-visibility"></i>Show/Hide Highlights</h3>
+          <p class="feature-content">Use the <i class="help-icon h-icon-visibility"></i> button to toggle highlight visibility on a page.</p>
+        </section>
+        <section class="feature">
+          <h3 class="feature-heading"><i class="feature-icon h-icon-share"></i>Sharing a page</h3>
+          <div class="feature-content">
+            <p>Use the <i class="help-icon h-icon-share"></i> button to get a sharable link to the page with annotations.</p>
+          </div>
+        </section>
       </section>
       <section class="help-page-section">
         <h2 class="help-page-heading">Resources</h2>
