--- a/h/static/styles/simple-search.scss
+++ b/h/static/styles/simple-search.scss
@@ -9,7 +9,7 @@
   @include clearfix;
   position: relative;
   padding: 0 1.5385em;
-  color: $gray;
+  color: $gray-darker;
 }
 
 .simple-search-form * {
@@ -23,7 +23,7 @@
 }
 
 :not(:focus) ~ .simple-search-icon {
-  color: $gray-lighter;
+  color: $gray-light;
 }
 
 input.simple-search-input {
