Update welcome page to reflect new UX and iconography.

--- a/h/static/styles/help-page.scss
+++ b/h/static/styles/help-page.scss
@@ -1,5 +1,13 @@
 @import "./mixins/icons";
 
+/* HACKY THINGS */
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic);
+
+html, body {
+  font-family: "lato", sans-serif !important;
+}
+/* / HACKY THINGS */
+
 .help-page {
   padding-top: 2.5em;
   padding-bottom: 2.5em;
@@ -11,6 +19,7 @@
 
   .masthead {
     margin-bottom: 2.5em;
+    margin-left: -1em;
   }
 }
 
@@ -36,7 +45,7 @@
 
 .help-page-heading,
 .help-page-lede {
-  text-align: center;
+  // text-align: center;
 }
 
 .help-page-lede {
