--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -54,37 +54,34 @@
       {% endif %}
       <section class="help-page-section">
         <h2 id="key-features" class="help-page-heading">Annotation Types</h2>
-        <p class="help-page-lede">There are a few different types of annotations that can be created
+        <p class="help-page-lede">There are a few types of annotations that can be created
           with the application:</p>
-        <div class="grid feature-content">
-          <section class="feature column-desktop-1-2">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-create"></i> Notes</h3>
+        <div class="feature-content">
+          <section class="feature">
+            <h3 class="feature-heading"><i class="feature-icon h-icon-mode-comment"></i> Notes</h3>
             <div class="feature-content styled-text">
-              <p>Create a  <em>note</em> by selecting some text and clicking the button
-                that appears above the selection. You can then add your own
-                comments and tags.</p>
+              <p>Create a <em>note</em> by selecting some text and clicking the <i class="help-icon h-icon-mode-comment"></i> button</p>
             </div>
           </section>
-          <section class="feature column-desktop-1-2">
+          <section class="feature">
             <h3 class="feature-heading"><i class="feature-icon h-icon-border-color"></i> Highlights</h3>
             <div class="feature-content">
-              <p>Quick  <em>highlights</em> can be created with the highlighter mode;
-                  enable this by using the  highlighter <i class="help-icon h-icon-border-color"></i> button in the application
-                  menu.</p>
+              <p><em>Highlights</em> can be created by clicking the <i class="help-icon h-icon-border-color"></i> button. 
+              Try it on this sentence.</p>
             </div>
           </section>
-          <section class="feature column-desktop-1-2">
+<!--           <section class="feature column-desktop-1-2">
             <h3 class="feature-heading"><i class="feature-icon h-icon-mode-comment"></i> Comments</h3>
             <div class="feature-content">
               <p>Leave a  <em>comment</em> on the document by using the comment <i class="help-icon h-icon-add"></i> button
                 in the application menu.</p>
             </div>
-          </section>
-          <section class="feature column-desktop-1-2">
+          </section> -->
+          <section class="feature">
             <h3 class="feature-heading"><i class="feature-icon h-icon-reply"></i> Replies</h3>
             <div class="feature-content">
-              <p>You can  <em>reply</em> to any annotation by using the  reply <i class="help-icon h-icon-reply"></i> action
-                found at the bottom of each card.</p>
+              <p>You can  <em>reply</em> to any annotation by using the <i class="help-icon h-icon-reply"></i> reply action
+                on every card.</p>
             </div>
           </section>
         </div>
@@ -109,6 +106,10 @@
             </div>
           </section>
         </div>
+      </section>
+      <section class="help-page-section">
+        <h3 class="feature-heading"><i class="feature-icon h-icon-visibility"></i>Show/Hide Highlights</h3>
+        <p class="feature-content">Use the <i class="help-icon h-icon-visibility"></i> button to toggle highlight visibility on a page.</p>
       </section>
       <section class="help-page-section">
         <h2 class="help-page-heading">Resources</h2>
@@ -158,7 +159,7 @@
     </article>
     <div class="help-page-sidebar">
       <div id="help-1">
-        <p>Show and hide the sidebar using the <i class="h-icon-mode-comment"></i> button</p>
+        <p>Show and hide the sidebar using the <i class="h-icon-arrow-back"></i> button</p>
       </div>
       <div id="help-2"></div>
     </div>
