--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -1,6 +1,7 @@
 <a href=""
    class="threadexp"
-   title="{{vm.collapsed && 'Expand' || 'Collapse'}}">
+   title="{{vm.collapsed && 'Expand' || 'Collapse'}}"
+   ng-click="vm.toggleCollapsed()">
    <span ng-class="{'h-icon-expand-more': !!vm.collapsed,
                     'h-icon-expand-less': !vm.collapsed}"></span>
 </a>
