Restore and modify needed test.
Clean up and delete a few unneeded things.

--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -35,7 +35,7 @@ $link-color-hover:       $hypothered !default;
 
 // Typography
 // -------------------------
-$sans-font-family:        "Lato","Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !default;
+$sans-font-family:        "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !default;
 $serif-font-family:       Georgia, "Bitstream Charter", "Times", "Times New Roman", serif !default;
 $mono-font-family:        Open Sans Mono, Menlo, DejaVu Sans Mono, monospace !default;
 
