Simplify code, tweak class names.

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -7,7 +7,7 @@
 $base-font-size: 14px;
 
 //ADDER////////////////////////////////
-.adder-group {
+.annotator-adder {
   $border: $gray;
   $hoverborder: $gray-dark;
   @include box-sizing(border-box);
